Bug 363760 - Crash when parsing some old python library
Summary: Crash when parsing some old python library
Status: RESOLVED FIXED
Alias: None
Product: kdev-python
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 1.7.3
Assignee: Sven Brauch
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-31 20:05 UTC by Mattia Basaglia
Modified: 2016-06-10 13:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mattia Basaglia 2016-05-31 20:05:10 UTC
Sometimes when background parser is scanning some old python code KDevelop crashes.

Here is the log from a crash:
====> PARSING ====> parsing file  KUrl("file:///.../lib/python2.5/site-packages/statlib/matfunc.py") ; has priority 10000
 ====> AST     ====>     building abstract syntax tree for  "/.../lib/python2.5/site-packages/statlib/matfunc.py"
 ====> DUCHAIN ====>     building duchain for "/.../lib/python2.5/site-packages/statlib/matfunc.py"
ASSERT: "comprehensionContext" in file /build/buildd/kdev-python-1.7.1/duchain/expressionvisitor.cpp, line 581
KCrash: Application 'kdevelop' crashing...
KCrash: Attempting to start /usr/lib/kde4/libexec/drkonqi from kdeinit
KCrash: Connect sock_file=/home/my_user/.kde/socket-my_hostname/kdeinit4__0
QSocketNotifier: Invalid socket 7 and type 'Read', disabling...
QSocketNotifier: Invalid socket 15 and type 'Read', disabling...
QSocketNotifier: Invalid socket 34 and type 'Read', disabling...
QSocketNotifier: Invalid socket 39 and type 'Exception', disabling...
QSocketNotifier: Invalid socket 21 and type 'Read', disabling...
QSocketNotifier: Invalid socket 16 and type 'Read', disabling...
QSocketNotifier: Invalid socket 19 and type 'Read', disabling...
kdevelop: Fatal IO error: client killed
IndexedContainerData::m_values There were items left on destruction: 1
ClassDeclarationData::m_decorators There were items left on destruction: 56
SpecialTemplateDeclarationData::m_specializations There were items left on destruction: 12
ClassFunctionDeclarationData::m_defaultParameters There were items left on destruction: 4606
DUContextData::m_uses There were items left on destruction: 67212
TopDUContextData::m_usedDeclarationIds There were items left on destruction: 1678
TopDUContextData::m_problems There were items left on destruction: 1797
FunctionDeclarationData::m_decorators There were items left on destruction: 1140
DUContextData::m_importers There were items left on destruction: 32139
DUContextData::m_importedContexts There were items left on destruction: 33480
FunctionTypeData::m_arguments There were items left on destruction: 9
FunctionDeclarationData::m_defaultParameters There were items left on destruction: 34508
DUContextData::m_childContexts There were items left on destruction: 79390
ClassDeclarationData::baseClasses There were items left on destruction: 4712
DUContextData::m_localDeclarations There were items left on destruction: 79390
Unable to start Dr. Konqi
Not forwarding the crash to Apport.

And a copy of the file causing the issue:
https://raw.githubusercontent.com/seperman/python-statlib/master/statlib/matfunc.py
Comment 1 Sven Brauch 2016-05-31 20:07:26 UTC
Since it looks like you build yourself anyways, can you please rebuild 1.7.3? 1.7.1 is very old and several crashes were fixed since then.
Comment 2 Mattia Basaglia 2016-05-31 20:11:43 UTC
This is from the ubuntu debs, I can try to compile it but it might take some time before I'll get around to do that.
Comment 3 Sven Brauch 2016-05-31 20:18:02 UTC
I just checked, still crashes with 1.7.3. Here's the trace:

(gdb) bt
#0  0x00007ffff3521440 in KDevelop::DUChainPointerData::base() const () from /usr/lib/libkdevplatformlanguage.so.8                                                                            
#1  0x00007fff3d5800af in Python::Helper::declarationForName(KDevelop::QualifiedIdentifier const&, KDevelop::RangeInRevision const&, KDevelop::DUChainPointer<KDevelop::DUContext>) ()
   from /usr/lib/libkdev4pythonduchain.so
#2  0x00007fff3d575e1b in Python::ExpressionVisitor::visitName(Python::NameAst*) () from /usr/lib/libkdev4pythonduchain.so
#3  0x00007fff3d5794d2 in Python::ExpressionVisitor::visitBinaryOperation(Python::BinaryOperationAst*) () from /usr/lib/libkdev4pythonduchain.so
#4  0x00007fff3d5794df in Python::ExpressionVisitor::visitBinaryOperation(Python::BinaryOperationAst*) () from /usr/lib/libkdev4pythonduchain.so
#5  0x00007fff3d57d161 in Python::ExpressionVisitor::visitListComprehension(Python::ListComprehensionAst*) () from /usr/lib/libkdev4pythonduchain.so
#6  0x00007fff3d5794df in Python::ExpressionVisitor::visitBinaryOperation(Python::BinaryOperationAst*) () from /usr/lib/libkdev4pythonduchain.so
#7  0x00007fff3d57d161 in Python::ExpressionVisitor::visitListComprehension(Python::ListComprehensionAst*) () from /usr/lib/libkdev4pythonduchain.so
#8  0x00007fff3d57a3cb in Python::ExpressionVisitor::visitCall(Python::CallAst*) () from /usr/lib/libkdev4pythonduchain.so
#9  0x00007fff3d576fb6 in Python::ExpressionVisitor::visitAttribute(Python::AttributeAst*) () from /usr/lib/libkdev4pythonduchain.so
#10 0x00007fff3d57a445 in Python::ExpressionVisitor::visitCall(Python::CallAst*) () from /usr/lib/libkdev4pythonduchain.so
#11 0x00007fff3d594e38 in Python::DeclarationBuilder::visitReturn(Python::ReturnAst*) () from /usr/lib/libkdev4pythonduchain.so
#12 0x00007fff3d58d4c5 in Python::ContextBuilder::visitFunctionBody(Python::FunctionDefinitionAst*) () from /usr/lib/libkdev4pythonduchain.so
#13 0x00007fff3d59f33a in Python::DeclarationBuilder::visitFunctionDefinition(Python::FunctionDefinitionAst*) () from /usr/lib/libkdev4pythonduchain.so
#14 0x00007fff5918b9dc in Python::AstDefaultVisitor::visitCode(Python::CodeAst*) () from /usr/lib/libkdev4pythonparser.so
#15 0x00007fff3d58f896 in Python::ContextBuilder::visitCode(Python::CodeAst*) () from /usr/lib/libkdev4pythonduchain.so
#16 0x00007fff3d5a235e in ?? () from /usr/lib/libkdev4pythonduchain.so
#17 0x00007fff3d58e3fd in Python::ContextBuilder::build(KDevelop::IndexedString const&, Python::Ast*, KDevelop::ReferencedTopDUContext) () from /usr/lib/libkdev4pythonduchain.so
#18 0x00007fff3d5954b3 in Python::DeclarationBuilder::build(KDevelop::IndexedString const&, Python::Ast*, KDevelop::ReferencedTopDUContext) () from /usr/lib/libkdev4pythonduchain.so
#19 0x00007fff3d595450 in Python::DeclarationBuilder::build(KDevelop::IndexedString const&, Python::Ast*, KDevelop::ReferencedTopDUContext) () from /usr/lib/libkdev4pythonduchain.so
#20 0x00007fff3da74d0a in ?? () from /usr/lib/kde4/kdevpythonlanguagesupport.so
#21 0x00007fffeab4c932 in ?? () from /usr/lib/libthreadweaver.so.4
#22 0x00007fffeab4cb3e in ThreadWeaver::Job::execute(ThreadWeaver::Thread*) () from /usr/lib/libthreadweaver.so.4
#23 0x00007fffeab4c20b in ThreadWeaver::Thread::run() () from /usr/lib/libthreadweaver.so.4
#24 0x00007ffff4c2c12c in ?? () from /usr/lib/libQtCore.so.4
#25 0x00007ffff2239474 in start_thread () from /usr/lib/libpthread.so.0
#26 0x00007ffff455f69d in clone () from /usr/lib/libc.so.6

It still crashes in current master actually, trace there is:
Thread 9 (Thread 0x7ffa290d5700 (LWP 10865)):
[KCrash Handler]
#5  0x00007ffa4470e295 in raise () from /usr/lib/libc.so.6
#6  0x00007ffa4470f6da in abort () from /usr/lib/libc.so.6
#7  0x00007ffa453afc61 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#8  0x00007ffa453aaebe in qt_assert(char const*, char const*, int) () from /usr/lib/libQt5Core.so.5
#9  0x00007ff9ea311dfe in Python::ExpressionVisitor::visitListComprehension (this=0x7ffa290d2ec0, node=0x7ffa18163c60) at ../duchain/expressionvisitor.cpp:511
#10 0x00007ff9f48afd27 in Python::AstVisitor::visitNode (this=0x7ffa290d2ec0, node=0x7ffa18163c60) at ../parser/astvisitor.cpp:70
#11 0x00007ff9ea313719 in Python::ExpressionVisitor::visitBinaryOperation (this=0x7ffa290d3100, node=0x7ffa18163520) at ../duchain/expressionvisitor.cpp:712
#12 0x00007ff9f48afc49 in Python::AstVisitor::visitNode (this=0x7ffa290d3100, node=0x7ffa18163520) at ../parser/astvisitor.cpp:64
#13 0x00007ff9ea311e20 in Python::ExpressionVisitor::visitListComprehension (this=0x7ffa290d3520, node=0x7ffa181634d0) at ../duchain/expressionvisitor.cpp:512
#14 0x00007ff9f48afd27 in Python::AstVisitor::visitNode (this=0x7ffa290d3520, node=0x7ffa181634d0) at ../parser/astvisitor.cpp:70
#15 0x00007ff9ea30e452 in Python::ExpressionVisitor::visitCall (this=0x7ffa290d3520, node=0x7ffa181633b0) at ../duchain/expressionvisitor.cpp:147
#16 0x00007ff9f48afebe in Python::AstVisitor::visitNode (this=0x7ffa290d3520, node=0x7ffa181633b0) at ../parser/astvisitor.cpp:81
#17 0x00007ff9ea33dce6 in Python::DeclarationBuilder::visitCall (this=0x7ffa180c70f0, node=0x7ffa181633b0) at ../duchain/declarationbuilder.cpp:1156
#18 0x00007ff9f48afebe in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa181633b0) at ../parser/astvisitor.cpp:81
#19 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa181633b0) at ../duchain/declarationbuilder.cpp:1988
#20 0x00007ff9f48ac31a in Python::AstDefaultVisitor::visitAttribute (this=0x7ffa180c7148, node=0x7ffa181632e0) at ../parser/astdefaultvisitor.cpp:407
#21 0x00007ff9f48afee3 in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa181632e0) at ../parser/astvisitor.cpp:82
#22 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa181632e0) at ../duchain/declarationbuilder.cpp:1988
#23 0x00007ff9f48abf78 in Python::AstDefaultVisitor::visitCall (this=0x7ffa180c7148, node=0x7ffa18163280) at ../parser/astdefaultvisitor.cpp:383
#24 0x00007ff9ea33dca9 in Python::DeclarationBuilder::visitCall (this=0x7ffa180c70f0, node=0x7ffa18163280) at ../duchain/declarationbuilder.cpp:1147
#25 0x00007ff9f48afebe in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa18163280) at ../parser/astvisitor.cpp:81
#26 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa18163280) at ../duchain/declarationbuilder.cpp:1988
#27 0x00007ff9f48aa84c in Python::AstDefaultVisitor::visitReturn (this=0x7ffa180c7148, node=0x7ffa18163240) at ../parser/astdefaultvisitor.cpp:185
#28 0x00007ff9ea342603 in Python::DeclarationBuilder::visitReturn (this=0x7ffa180c70f0, node=0x7ffa18163240) at ../duchain/declarationbuilder.cpp:1851
#29 0x00007ff9f48af977 in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa18163240) at ../parser/astvisitor.cpp:44
#30 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa18163240) at ../duchain/declarationbuilder.cpp:1988
#31 0x00007ff9ea333078 in Python::ContextBuilder::visitNodeList<Python::Ast> (this=0x7ffa180c70f0, l=...) at ../duchain/contextbuilder.h:179
#32 0x00007ff9ea33155c in Python::ContextBuilder::visitFunctionBody (this=0x7ffa180c70f0, node=0x7ffa18162a00) at ../duchain/contextbuilder.cpp:482
#33 0x00007ff9ea3409c5 in Python::DeclarationBuilder::visitFunctionDefinition (this=0x7ffa180c70f0, node=0x7ffa18162a00) at ../duchain/declarationbuilder.cpp:1620
#34 0x00007ff9f48af931 in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa18162a00) at ../parser/astvisitor.cpp:42
#35 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa18162a00) at ../duchain/declarationbuilder.cpp:1988
#36 0x00007ff9f48a9de9 in Python::AstDefaultVisitor::visitCode (this=0x7ffa180c7148, node=0x7ffa18086380) at ../parser/astdefaultvisitor.cpp:79
#37 0x00007ff9ea330263 in Python::ContextBuilder::visitCode (this=0x7ffa180c70f0, node=0x7ffa18086380) at ../duchain/contextbuilder.cpp:319
#38 0x00007ff9ea33729b in Python::DeclarationBuilder::visitCode (this=0x7ffa180c70f0, node=0x7ffa18086380) at ../duchain/declarationbuilder.cpp:372
#39 0x00007ff9f48af90e in Python::AstVisitor::visitNode (this=0x7ffa180c7148, node=0x7ffa18086380) at ../parser/astvisitor.cpp:41
#40 0x00007ff9ea343a91 in Python::DeclarationBuilder::visitNode (this=0x7ffa180c70f0, node=0x7ffa18086380) at ../duchain/declarationbuilder.cpp:1988
#41 0x00007ff9ea32f685 in Python::ContextBuilder::startVisiting (this=0x7ffa180c70f0, node=0x7ffa18086380) at ../duchain/contextbuilder.cpp:142
#42 0x00007ff9ea3332fd in KDevelop::AbstractContextBuilder<Python::Ast, Python::Identifier>::supportBuild (this=0x7ffa180c70f0, node=0x7ffa18086380, context=0x7ffa18093fd0) at /home/sven/install5/include/kdevplatform/language/duchain/builders/abstractcontextbuilder.h:134
#43 0x00007ff9ea353693 in KDevelop::AbstractTypeBuilder<Python::Ast, Python::Identifier, Python::ContextBuilder>::supportBuild (this=0x7ffa180c70f0, node=0x7ffa18086380, context=0x7ffa18093fd0) at /home/sven/install5/include/kdevplatform/language/duchain/builders/abstracttypebuilder.h:85
#44 0x00007ff9ea3322e3 in KDevelop::AbstractContextBuilder<Python::Ast, Python::Identifier>::build (this=0x7ffa180c70f0, url=..., node=0x7ffa18086380, updateContext=...) at /home/sven/install5/include/kdevplatform/language/duchain/builders/abstractcontextbuilder.h:114
#45 0x00007ff9ea32f36c in Python::ContextBuilder::build (this=0x7ffa180c70f0, url=..., node=0x7ffa18086380, updateContext=...) at ../duchain/contextbuilder.cpp:74
#46 0x00007ff9ea336ef0 in Python::DeclarationBuilder::build (this=0x7ffa180c70f0, url=..., node=0x7ffa18086380, updateContext=...) at ../duchain/declarationbuilder.cpp:107
#47 0x00007ff9ea336d48 in Python::DeclarationBuilder::build (this=0x7ffa290d46c0, url=..., node=0x7ffa18086380, updateContext=...) at ../duchain/declarationbuilder.cpp:100
#48 0x00007ff9ea7fa799 in Python::ParseJob::run (this=0x67bdef0) at ../pythonparsejob.cpp:168
#49 0x00007ffa418cd6f6 in ThreadWeaver::IdDecorator::run(QSharedPointer<ThreadWeaver::JobInterface>, ThreadWeaver::Thread*) () from /usr/lib/libKF5ThreadWeaver.so.5
#50 0x00007ffa418cdcf8 in ThreadWeaver::Executor::run(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () from /usr/lib/libKF5ThreadWeaver.so.5
#51 0x00007ffa418ccc1a in ThreadWeaver::Job::execute(QSharedPointer<ThreadWeaver::JobInterface> const&, ThreadWeaver::Thread*) () from /usr/lib/libKF5ThreadWeaver.so.5
#52 0x00007ffa418cc2c0 in ThreadWeaver::Thread::run() () from /usr/lib/libKF5ThreadWeaver.so.5
#53 0x00007ffa453c81d8 in ?? () from /usr/lib/libQt5Core.so.5
#54 0x00007ffa3d5c6474 in start_thread () from /usr/lib/libpthread.so.0
#55 0x00007ffa447c269d in clone () from /usr/lib/libc.so.6
Comment 4 Sven Brauch 2016-06-10 13:43:31 UTC
Git commit 4a6db3885cd0b0837a3efde954b90cfd21f6a410 by Sven Brauch.
Committed on 10/06/2016 at 13:43.
Pushed by brauch into branch '1.7-py3'.

Fix crash on stacked comprehensions

M  +2    -2    duchain/contextbuilder.cpp
M  +2    -0    duchain/declarationbuilder.cpp
M  +3    -3    duchain/expressionvisitor.cpp
M  +1    -0    duchain/tests/pyduchaintest.cpp

http://commits.kde.org/kdev-python/4a6db3885cd0b0837a3efde954b90cfd21f6a410
Comment 5 Sven Brauch 2016-06-10 13:43:31 UTC
Git commit 2eeb9abcaca79d45f5254aed25412cf334c10d0b by Sven Brauch.
Committed on 10/06/2016 at 13:42.
Pushed by brauch into branch '5.0'.

Fix crash on stacked comprehensions

M  +2    -2    duchain/contextbuilder.cpp
M  +2    -0    duchain/declarationbuilder.cpp
M  +3    -3    duchain/expressionvisitor.cpp
M  +1    -0    duchain/tests/pyduchaintest.cpp

http://commits.kde.org/kdev-python/2eeb9abcaca79d45f5254aed25412cf334c10d0b