Fix crash on stacked comprehensions

BUG:363760