duchain/contextbuilder.cpp
@@ -27,6 +27,7 @@
 #include "pythonparsejob.h"
 #include "declarationbuilder.h"
 #include "helpers.h"
+#include "duchaindebug.h"
 
 #include <KStandardDirs>
 
@@ -244,8 +245,6 @@ void ContextBuilder::visitGeneratorExpression(GeneratorExpressionAst* node)
 RangeInRevision ContextBuilder::comprehensionRange(Ast* node)
 {
     RangeInRevision range = editorFindRange(node, node);
-    range.start.column -= 1;
-    range.end.column += 1;
     return range;
 }
 
@@ -256,6 +255,7 @@ void ContextBuilder::visitComprehensionCommon(Ast* node)
     if ( range.isValid() ) {
         DUChainWriteLocker lock(DUChain::lock());
         openContext(node, range, KDevelop::DUContext::Other);
+        qCDebug(KDEV_PYTHON_DUCHAIN) << "creating comprehension context" << node << range;
         Q_ASSERT(currentContext());
 //         currentContext()->setLocalScopeIdentifier(QualifiedIdentifier("<generator>"));
         lock.unlock();
